test(event): update test code for domainService #44